ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOEvent__c/IKOEvent__c.object-meta.xml
<CustomObject>
    <label>IKOEvent</label>
    <nameField>
        <label>IKOEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IKOEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>