ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Holiday</fullName>
            </value>
            <value>
                <fullName>Company Picnic</fullName>
            </value>
            <value>
                <fullName>Townhall Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>